--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <h1>STAY CONNECTED</h1>
         <h2>hello@design.com</h2>
         <div>
-            <i><img src="/images/icon1.png" alt=""></i>
-            <i><img src="/images/icon2.png" alt=""></i>
-            <i><img src="/images/icon3.png" alt=""></i>
+            <i><img src="images/icon1.png" alt=""></i>
+            <i><img src="images/icon2.png" alt=""></i>
+            <i><img src="images/icon3.png" alt=""></i>
         </div>
     </footer>
 </body>
